# polymer

./: -N  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  LICENSE  Makefile  README  aggregate_jobs.sh  cleanup.sh  exact.nb  launch_jobs.sh  log  make_hists.py  run_job.sh  run_trial_gd_jobs.sh  run_trial_md_jobs.sh
configs/: 20171002.tex  3.cfg  4.cfg  5.cfg  default.cfg  exact.cfg  polymer.cfg  solvents.cfg  trial_job.cfg  zerolj.cfg
doc/: Doxyfile
include/: atom.h  basics.h  bond.h  config_handler.h  default_macros.h  diatomic_config_handler.h  diatomic_observables.h  dynamic_observables.h  force_updater.h  general_observables.h  geodesic_manager.h  geodesic_observables.h  geodesic_path.h  geodesic_path_analyzer.h  geodesic_path_computer.h  geodesic_record.h  integrator.h  lj_rattle_test.h  lj_verlet_test.h  ljpotential.h  ljpotential_not_unity.h  ljpotential_observable_container.h  molecule.h  natomic_config_handler.h  observable.h  observable_container.h  observables.h  parsing.h  polymer_observables.h  potential.h  rattle_integrator.h  settings_parser.h  shove_integrator.h  simple_atom.h  simple_bond.h  simple_polymer.h  simple_simulation.h  simple_solvent.h  simple_state.h  simulation.h  (+7 more)
mathematica/: SLERP_enhancement.nb  action_exact.nb
plot/: default_settings.py  plot_observable.py  plot_potential.py  plot_relaxation_time.py  plot_trajectories.py  plotter.py  plotting_draft  test_algorithms.py
src/: atom.cpp  atom_test.cpp  bond.cpp  bond_test.cpp  config_handler.cpp  diatomic_config_handler.cpp  diatomic_observables.cpp  diatomic_test.cpp  dynamic_observables.cpp  force_updater.cpp  general_observables.cpp  geodesic_manager.cpp  geodesic_manager_test.cpp  geodesic_observables.cpp  geodesic_path.cpp  geodesic_path_computer.cpp  geodesic_path_test.cpp  geodesic_record.cpp  geodesic_record_test.cpp  initialize_triatomic.cpp  integrator.cpp  lj_rattle_test.cpp  lj_verlet_test.cpp  ljpotential.cpp  ljpotential_not_unity.cpp  ljpotential_observable_container.cpp  ljpotential_test.cpp  molecule.cpp  molecule_test.cpp  natomic_config_handler.cpp  observable.cpp  observable_container.cpp  observable_container_test.cpp  observable_test.cpp  observables.cpp  observables_test.cpp  parsing.cpp  parsing_test.cpp  polymer_observables.cpp  potential.cpp  (+33 more)
visualize/: example.xyz
